EditableHeading. Use "word-wrap: break-word" for the single-line mode to break long words and prevent them from hiding [publish]

--- a/src/editable-heading/editable-heading.css
+++ b/src/editable-heading/editable-heading.css
@@ -70,12 +70,15 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 
-  word-wrap: break-word;
+  word-break: break-all;
 
   border-radius: var(--ring-border-radius);
 
   .multiline & {
     -webkit-line-clamp: 3;
+
+    word-wrap: break-word;
+    word-break: normal;
   }
 }
 
